Fixing a regression of [5259] where button text label vertical alignment is broken in webkit.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@5514 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/toolbar.css
+++ b/_source/skins/kama/toolbar.css
@@ -383,19 +383,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	line-height: 17px;
 }
 
-/* IE8 strict button valign correction */
-.cke_skin_kama .cke_browser_ie8 .cke_button .cke_label
-{
-	vertical-align: top;
-}
-
-.cke_skin_kama .cke_browser_iequirks.cke_browser_ie8 .cke_button .cke_label
-{
-	/* revert previous */
-	vertical-align: middle;
-}
-/* END IE8 strict button valign correction */
-
 /* Fix cursor shape consistency on toolbar combos (#4031) */
 .cke_skin_kama .cke_browser_ie .cke_rcombo,
 .cke_skin_kama .cke_browser_ie .cke_rcombo *
