--- a/_source/skins/office2003/toolbar.css
+++ b/_source/skins/office2003/toolbar.css
@@ -312,7 +312,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	display: none;
 	padding-left: 3px;
 	cursor: default;
-
+	vertical-align:middle;
 	_background-image: url(images/sprites_ie6.png);
 	_background-position: 0 -970px;
 	_background-repeat: repeat-x;
